--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,9 @@ style {
 
 /* <!-- heder --> */
 
+.page-header{
+    border-bottom: 1px solid #e7e9fc
+}
 
 .logo{
 font-family: "Raleway", sans-serif;
@@ -93,6 +96,7 @@ font-family: "Raleway", sans-serif;
     display: flex;
     flex-direction: row;
     gap: 40px;
+    padding: 24px 0
 }
 
 
@@ -144,14 +148,7 @@ color: #404bbf;
 
 /* <!-- Sektion-1 --> */
 
-.hero-wrap {
-    max-width: 496px;
-    margin: 0, auto;
-    padding-left: auto;
-    padding-right: auto;
-    padding-top: 188px;
-    margin: 0 auto;
-}
+
 
 .hero-title {
     font-family: "Roboto", sans-serif;
@@ -168,6 +165,10 @@ color: #404bbf;
     height: 600px;
     background: #2e2f42;
     box-sizing: content-box;
+    padding: 188px 0;
+max-width: 496px;
+    
+
 }
 
 .button {
@@ -183,6 +184,10 @@ color: #404bbf;
     border: none;
     margin: 0, auto;
     display: block;
+    min-width: 169px;
+    height: 56px;
+
+
 }
 
 .button:hover,
@@ -194,6 +199,12 @@ color: #404bbf;
 
 
 /* <!-- Sektion-2 --> */
+
+.section-benefits{
+    padding: 120px 0
+}
+
+
 
 .visually-hidden {
     position: absolute;
@@ -211,6 +222,7 @@ color: #404bbf;
     display: flex;
     padding-top: 120px;
     padding-bottom: 160px;
+    gap: 24px;
 }
 
 
@@ -231,6 +243,11 @@ color: #404bbf;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+margin-bottom: 8px;
+}
+
+.benefits-item:first-child{ 
+    calc((100% - 72px) / 4);
 }
 
 .benefits-list-tekst{
@@ -250,6 +267,11 @@ color: #404bbf;
     max-width: 100%;
     height: 732px;
     background-color: #F4F4FD;
+    padding: 120px 0.;
+}
+
+.team-list-icon{
+    border-radius: 0px 0px 4px 4px;
 }
 
 
