--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,7 @@ font-family: "Raleway", sans-serif;
     color: #434455;
     margin-right: 40px;
     text-decoration: none;
+    padding: 24px 0;
 }
 
 .nav-link:hover {
@@ -167,12 +168,11 @@ color: #404bbf;
 }
 
 .section-hero {
+    display: flex;
     height: 600px;
     background: #2e2f42;
     box-sizing: content-box;
     padding: 188px 0;
-    padding: 188px 0;
-
 }
 
 .button {
@@ -212,14 +212,15 @@ color: #404bbf;
 
 .visually-hidden {
     position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    border: 0;
-    overflow: hidden;
-    clip-path: inset(50%);
-    white-space: nowrap;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        border: 0;
+        padding: 0;
+        white-space: nowrap;
+        clip-path: inset(100%);
+        clip: rect(0 0 0 0);
+        overflow: hidden;
 }
 
 .benefits-menu {
@@ -271,7 +272,6 @@ margin-bottom: 8px;
     max-width: 100%;
     height: 732px;
     background-color: #F4F4FD;
-    padding: 120px 0;
     
 }
 
@@ -295,6 +295,8 @@ margin-bottom: 8px;
 .team-list-item{
     border-radius: 0px 0px 4px 4px;
     background-color: #FFFFFF;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+        background: #fff;
 }
 
 
@@ -324,7 +326,6 @@ margin-bottom: 8px;
 
 .portfolio {
     display: flex;
-padding-top: 120px;
     padding-bottom: 120px;
 }
 
