--- a/css/styles.css
+++ b/css/styles.css
@@ -272,7 +272,7 @@ margin-bottom: 8px;
     max-width: 100%;
     height: 732px;
     background-color: #F4F4FD;
-    
+    padding: 120px 0;
 }
 
 .team-content{
@@ -326,6 +326,7 @@ margin-bottom: 8px;
 
 .portfolio {
     display: flex;
+    padding-top: 120px;
     padding-bottom: 120px;
 }
 
