--- a/css/styles.css
+++ b/css/styles.css
@@ -281,15 +281,16 @@ margin-bottom: 8px;
 .sections-list-title{
     text-align: center;
 margin-bottom: 8px;
-margin-top: 32px;
 }
 
 .sections-list-text{
     text-align: center;
-    margin-bottom: 32px;
+
 }
 
-
+.team-content{
+   padding: 32px 0;
+}
 
 .team-list-item{
     border-radius: 0px 0px 4px 4px;
@@ -315,7 +316,7 @@ margin-top: 32px;
 
 .portfolio {
     display: flex;
-    padding-top: 80px;
+    padding-top: 120px;
     padding-bottom: 120px;
 }
 
@@ -351,6 +352,7 @@ margin-top: 32px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px
 }
 
 .sections-text{
